Fix mantainibility issues